--- a/admin/config.yml
+++ b/admin/config.yml
@@ -37,20 +37,20 @@ collections: # A list of collections the CMS should be able to edit
               - {label: "Footer", name: "footer", widget: "markdown"}
 
   - name: "posts" # Used in routes, ie.: /admin/collections/:slug/edit
-    label: "Posts"  # Used in the UI, ie.: "New Post"
+    label: "Post"  # Used in the UI, ie.: "New Post"
     folder: "posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     fields: # The fields each document in this collection have
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Short Description", name: "shortdesc", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
-    meta: # Meta data fields. Just like fields, but without any preview element
-      - {label: "Publish Date", name: "date", widget: "date"}
+    meta: # Meta data fields. Just like fields, but without any preview element      
+      - {label: "Banner", name: "banner", widget: "image", media_folder: "assets/img/uploads"} 
+      - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Author", name: "author", widget: "string"}
-      - {label: "Tags", name: "leadtag", widget: "string"}
+      - {label: "Title Tags", name: "leadtag", widget: "string"}
       - {label: "Meta Description", name: "metadesc", widget: "string"}
       - {label: "Meta Keywords", name: "metakeywords", widget: "string"}
-      - {label: "Banner", name: "banner", widget: "image", class: "image thumbnail", media_folder: "assets/img/uploads"}
 
   - name: "filemanager"
     label: "File Manager"
