--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-source-filesystem": "^2.0.3",
+    "gatsby-source-strapi": "0.0.3",
     "react": "^16.5.1",
     "react-bootstrap": "^1.0.0-beta.1",
-    "react-bootstrap-navbar-offcanvas": "^1.0.3",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
-    "react-side-bar": "^0.3.5"
+    "react-sidebar": "^3.0.2",
+    "react-sticky-el": "^1.0.20"
   },
   "keywords": [
     "gatsby"
