--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-bootstrap": "^1.0.0-beta.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-markdown": "^4.0.3",
+    "react-moment": "^0.8.1",
     "react-sidebar": "^3.0.2",
     "react-sticky-el": "^1.0.20"
   },
