--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.14.2"
+    "jquery": "^3.3.1",
+    "prettier": "^1.14.2",
+    "react-burger-menu": "^2.5.3",
+    "react-metismenu": "^1.4.0"
   },
   "repository": {
     "type": "git",
