add .env and add breadcrumbs

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-DATABASE_URI=https://serene-tor-48959.herokuapp.com
+API_URI=https://serene-tor-48959.herokuapp.com
+STRAPI_USER=allen@webriq.services
+STRAPI_PASSWORD=admin123
