--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-API_URI=https://serene-tor-48959.herokuapp.com
+API_URI=https://strapi-anzac-production.herokuapp.com
 STRAPI_USER=allen@webriq.services
 STRAPI_PASSWORD=admin123
