--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "gatsby-source-strapi": "0.0.3",
     "jquery": "^3.3.1",
     "prettier": "^1.14.2",
     "react-burger-menu": "^2.5.3",
