--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-source-filesystem": "^2.0.3",
-    "gatsby-source-strapi": "0.0.3",
+    "gatsby-source-strapi": "^0.0.5",
     "react": "^16.5.1",
     "react-bootstrap": "^1.0.0-beta.1",
     "react-dom": "^16.5.1",
