--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@reach/router": "^1.2.1",
+    "@webriq/gatsby-source-strapi": "^0.0.6",
     "bootstrap": "^4.1.3",
     "gatsby": "^2.0.0",
     "gatsby-plugin-manifest": "^2.0.2",
