--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 API_URI=https://strapi-anzac-production.herokuapp.com
 STRAPI_USER=allen@webriq.services
 STRAPI_PASSWORD=admin123
-
 SITE_RECAPTCHA_KEY=6Lf8CoAUAAAAAI3mIxwo_kEL4X06djUMGpjhfHP1
+SITE_RECAPTCHA_SECRET=6Lf8CoAUAAAAADiQNor8dFTtZ9GgKHsu6O_W69Sd
