--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-typography": "^2.2.2",
     "gatsby-source-filesystem": "^2.0.3",
     "gatsby-source-strapi": "^0.0.5",
     "react": "^16.5.1",
@@ -20,10 +21,15 @@
     "react-google-recaptcha": "^1.0.5",
     "react-grid-gallery": "^0.5.3",
     "react-helmet": "^5.2.0",
+    "react-lazy-load-image-component": "^1.1.5",
+    "react-lazyload": "^2.3.0",
     "react-markdown": "^4.0.3",
     "react-moment": "^0.8.1",
     "react-sidebar": "^3.0.2",
-    "react-sticky-el": "^1.0.20"
+    "react-sticky-el": "^1.0.20",
+    "react-typography": "^0.16.18",
+    "typography": "^0.16.18",
+    "typography-theme-bootstrap": "^0.16.18"
   },
   "keywords": [
     "gatsby"
