--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^1.0.0-beta.1",
     "react-dom": "^16.5.1",
     "react-facebook": "^6.0.15",
+    "react-facebook-sdk": "^1.1.1",
     "react-google-recaptcha": "^1.0.5",
     "react-grid-gallery": "^0.5.3",
     "react-helmet": "^5.2.0",
