--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ STRAPI_USER=allen@webriq.services
 STRAPI_PASSWORD=admin123
 SITE_RECAPTCHA_KEY=6Lf8CoAUAAAAAI3mIxwo_kEL4X06djUMGpjhfHP1
 SITE_RECAPTCHA_SECRET=6Lf8CoAUAAAAADiQNor8dFTtZ9GgKHsu6O_W69Sd
+
+GATSBY_ALGOLIA_APP_ID = BZA49JMRQV
+GATSBY_ALGOLIA_SEARCH_KEY=09f15511b54043c1c283a285d0bc13d1
+ALGOLIA_ADMIN_KEY = e5761a975096a48e4eaedf0bd8f3d4b8
