--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.2.1",
     "@reach/router": "^1.2.1",
     "@webriq/gatsby-source-strapi": "^0.0.6",
+    "algoliasearch": "^3.32.1",
     "bootstrap": "^4.1.3",
+    "dotenv": "^7.0.0",
     "gatsby": "^2.0.0",
+    "gatsby-plugin-algolia": "^0.3.0",
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-typography": "^2.2.2",
     "gatsby-source-filesystem": "^2.0.3",
     "gatsby-source-strapi": "^0.0.6",
+    "moment": "^2.24.0",
     "react": "^16.5.1",
     "react-bootstrap": "^1.0.0-beta.1",
     "react-dom": "^16.5.1",
@@ -22,6 +27,7 @@
     "react-google-recaptcha": "^1.0.5",
     "react-grid-gallery": "^0.5.3",
     "react-helmet": "^5.2.0",
+    "react-instantsearch-dom": "^5.4.0",
     "react-lazy-load-image-component": "^1.1.5",
     "react-lazyload": "^2.3.0",
     "react-markdown": "^4.0.3",
@@ -29,6 +35,8 @@
     "react-sidebar": "^3.0.2",
     "react-sticky-el": "^1.0.20",
     "react-typography": "^0.16.18",
+    "styled-components": "^4.2.0",
+    "styled-icons": "^7.9.0",
     "typography": "^0.16.18",
     "typography-theme-bootstrap": "^0.16.18"
   },
